# A2A

./: README.md  pyproject.toml
src/a2a/: __init__.py  agent.py  task_manager.py
